# dirt

./: Cargo.toml  index.html  readme.md
res/: settings.json
res/shaders/: font.wgsl  terrain.wgsl
res/terrains/: default.json
src/: lib.rs  main.rs
src/app/: mod.rs
src/game/: mod.rs
src/game/render/: bindings.rs  data.rs  font.rs  mod.rs  pipeline.rs  terrain.rs
src/game/world/: camera.rs  mod.rs  terrain.rs
