[package]
name = "dirt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-fs = "2.1.2"
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
gilrs = "0.11.0"
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-time = "1.1.0"
wgpu = "25.0.2"
winit = "0.30.11"
zip = "4.2.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
